--- a/public/users/index.html
+++ b/public/users/index.html
@@ -99,7 +99,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Article",
-    "articleSection": "Welcome to Congo! :tada:",
+    "articleSection": "Hola Gabs Te amo! :tada:",
     "name": "Users",
     "headline": "Users",
     "description": "Some real-life Congo examples.",
@@ -130,7 +130,7 @@
      {
        "@type": "ListItem",
        "item": "/",
-       "name": "Welcome to Congo! Tada",
+       "name": "Hola Gabs Te Amo! Tada",
        "position": 1
      },
      {
