--- a/public/index.html
+++ b/public/index.html
@@ -81,14 +81,14 @@
   
   <meta property="og:url" content="/">
   <meta property="og:site_name" content="Congo">
-  <meta property="og:title" content="Welcome to Congo! :tada:">
+  <meta property="og:title" content="Hola Gabs Te amo! :tada:">
   <meta property="og:description" content="This is a demo of the Congo theme for Hugo.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Welcome to Congo! :tada:">
+  <meta name="twitter:title" content="Hola Gabs Te amo! :tada:">
   <meta name="twitter:description" content="This is a demo of the Congo theme for Hugo.">
 
   
@@ -400,7 +400,7 @@
     <article class="prose max-w-full dark:prose-invert">
   
     <header>
-      <h1>Welcome to Congo! 🎉</h1>
+      <h1>Hola Gabs Te amo! 🎉</h1>
     </header>
   
   <section><div class="lead !mb-9 text-xl">
