--- a/public/samples/emoji/index.html
+++ b/public/samples/emoji/index.html
@@ -132,7 +132,7 @@
      {
        "@type": "ListItem",
        "item": "/",
-       "name": "Welcome to Congo! Tada",
+       "name": "Hola Gabs Te Amo! Tada",
        "position": 1
      },
      {
