--- a/public/samples/rich-content/index.html
+++ b/public/samples/rich-content/index.html
@@ -136,7 +136,7 @@
      {
        "@type": "ListItem",
        "item": "/",
-       "name": "Welcome to Congo! Tada",
+       "name": "Hola Gabs Te Amo! Tada",
        "position": 1
      },
      {
